--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-pillow>=10.3.0
-onnxruntime>=1.12.0
-gradio
+pillow>=11.1.0
+onnxruntime>=1.21.0
+onnxruntime-gpu>=1.21.0
+gradio>=5.22.0
 pyexiftool>=0.5.6
+numpy>=2.2.4
+pandas>=2.2.3
+huggingface-hub>=0.29.3
